Fixed issue with off center submit button

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,6 @@ button{
   color: white;
   border-radius: 5px;
   width:95%;
-  padding:5%;
   border: 2px solid #6e94bb;
 }
 
